ultraapi/tests/ui/response_model_parser_invalid_bool.stderr
error: response_model(by_alias=...) expects true/false
 --> tests/ui/response_model_parser_invalid_bool.rs:4:29
  |
4 | #[response_model(by_alias = "true")]
  |                             ^^^^^^
